# fastbogo

./: .env.example  .gitignore  Cargo.toml  README.md
scripts/: js-sample.js  pgo-build.ps1  pgo-build.sh  pgo-generate.ps1  pgo-generate.sh
src/: benchmark.rs  kernel.rs  kernel_simd.rs  lib.rs  libdivide.rs  main.rs
